datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
  // previewFeatures = []
}

generator dbml {
  provider = "prisma-dbml-generator"
}

// ======================================
// User Model
// ======================================

model Service {
  id           String        @id @default(cuid())
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt
  name         String
  serviceUsers ServiceUser[]
}

// ======================================
// User Model
// ======================================

model User {
  id           String        @id @default(cuid())
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt
  email        String        @unique
  username     String        @unique @default(cuid())
  password     String
  firstname    String?
  lastname     String?
  role         Role
  posts        Post[]
  serviceUsers ServiceUser[]
}

model ServiceUser {
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  nickname  String?
  serviceId String
  userId    String
  service   Service  @relation(fields: [serviceId], references: [id])
  user      User     @relation(fields: [userId], references: [id])

  @@id([serviceId, userId])
}

// ======================================
// Post Model
// ======================================

model Post {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  published Boolean
  title     String
  content   String?
  author    User?    @relation(fields: [authorId], references: [id])
  authorId  String?
}

enum Role {
  ADMIN
  USER
}
