//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Service {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  serviceUsers ServiceUser [not null]
}

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  username String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  role Role [not null]
  posts Post [not null]
  serviceUsers ServiceUser [not null]
}

Table ServiceUser {
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  nickname String
  serviceId String [not null]
  userId String [not null]
  service Service [not null]
  user User [not null]

  indexes {
    (serviceId, userId) [pk]
  }
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  content String
  author User
  authorId String
}

Enum Role {
  ADMIN
  USER
}

Ref: ServiceUser.serviceId > Service.id

Ref: ServiceUser.userId > User.id

Ref: Post.authorId > User.id